// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FolderTreeNode (snapshot) > renders collapsed folder node 1`] = `
"<div data-v-cc3945e0="" class="folder-tree-node">
  <div data-v-cc3945e0="" class="folder-tree-node__item" style="--depth: 0;">
    <!-- Expand/Collapse Arrow --><button data-v-cc3945e0="" class="folder-tree-node__toggle" aria-label="Expand folder"><svg data-v-cc3945e0="" width="var(--folder-chevron-size)" height="var(--folder-chevron-size)" viewBox="0 0 12 12" fill="none" class="">
        <path data-v-cc3945e0="" d="M4 2L8 6L4 10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
      </svg></button><!-- Folder Icon --><svg data-v-cc3945e0="" class="folder-tree-node__icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
      <path data-v-cc3945e0="" d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
    </svg><!-- Folder Name --><span data-v-cc3945e0="" class="folder-tree-node__name">Root</span><!-- Loading Spinner -->
    <!--v-if-->
  </div><!-- Children (Recursive) -->
  <!--v-if-->
</div>"
`;

exports[`FolderTreeNode (snapshot) > renders selected expanded node 1`] = `
"<div data-v-cc3945e0="" class="folder-tree-node folder-tree-node--selected folder-tree-node--expanded">
  <div data-v-cc3945e0="" class="folder-tree-node__item" style="--depth: 1;">
    <!-- Expand/Collapse Arrow --><button data-v-cc3945e0="" class="folder-tree-node__toggle" aria-label="Collapse folder"><svg data-v-cc3945e0="" width="var(--folder-chevron-size)" height="var(--folder-chevron-size)" viewBox="0 0 12 12" fill="none" class="folder-tree-node__toggle-icon--expanded">
        <path data-v-cc3945e0="" d="M4 2L8 6L4 10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
      </svg></button><!-- Folder Icon --><svg data-v-cc3945e0="" class="folder-tree-node__icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
      <path data-v-cc3945e0="" d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
    </svg><!-- Folder Name --><span data-v-cc3945e0="" class="folder-tree-node__name">Selected</span><!-- Loading Spinner -->
    <!--v-if-->
  </div><!-- Children (Recursive) -->
  <div data-v-cc3945e0="" class="folder-tree-node__children"></div>
</div>"
`;
